	Fixed bug where whitespace would be removed before/after invalid_elements when they where removed.
	Fixed bug where updating styles using the theme image dialog in non inline mode on IE9 would produce errors.
	Fixed bug where IE 8 would produce an error when using the contextmenu plugin.
	Fixed bug where delete/backspace could remove contents of noneditable elements.
Version 3.5b3 (2012-03-29)
	Added cancel button to colour picker dialog.
	Added figure and figcaption to the html5 visualblocks plugin.
	Added default alignment options for the figure element.
	Fixed bug where empty inline elements within block elements would sometimes produce a br child element.
	Fixed bug where urls pointing to the same domain as the current one would cause undefined errors. Patch contributed by Paul Giberson.
	Fixed bug where enter inside an editable element inside an non editable element would split the element.
	Fixed bug where cut/copy/paste of noneditable elements didn't work.
	Fixed bug where backspace would sometimes produce font elements on WebKit.
	Fixed bug where WebKit would produce spans out of various inline elements when using backspace.
	Fixed bug where IE9 wouldn't properly update image styles when images where resized.
	Fixed bug where drag/drop of noneditable elements didn't work correctly.
	Fixed bug where applying formatting to all contents wouldn't work correctly when an end point was inside an empty bock. Patch contributed by Jose Luiz.
	Fixed bug where IE10 removed the scopeName from the DOM element interface and there for it produced an undefined string in element path.
	Fixed bug where the caret would be placed at an incorrect location if you applied block formatting while having the caret at the end of the block.
	Fixed bug where applying column changes using the cell dialog would only update the first column. Patch contributed by krzyko.
	Fixed bug where the visualblocks plugin would force editor focus if it was turned on by default.