@@ -8,6 +8,7 @@ Version 3.5 (2012-05-xx)
 	Fixed bug where updating styles using the theme image dialog in non inline mode on IE9 would produce errors.
 	Fixed bug where IE 8 would produce an error when using the contextmenu plugin.
 	Fixed bug where delete/backspace could remove contents of noneditable elements.
+	Fixed so background color in style preview gets computed from body element if the current style element is transparent.
 Version 3.5b3 (2012-03-29)
 	Added cancel button to colour picker dialog.
 	Added figure and figcaption to the html5 visualblocks plugin.
